
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int DE1 ;
 int des (char*,unsigned char*) ;
 int deskey (unsigned char*,int ) ;
 scalar_t__ malloc (int) ;

char *

vncDecryptPasswd(char *inouttext, unsigned char *key)

{

    unsigned char *passwd = (unsigned char *)malloc(9);



    deskey(key, DE1);

    des(inouttext, passwd);



    passwd[8] = 0;



    return (char *)passwd;

}
