; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_21592.c_vncDecryptPasswd.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_21592.c_vncDecryptPasswd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DE1 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @vncDecryptPasswd(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call i64 @malloc(i32 9)
  %7 = inttoptr i64 %6 to i8*
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* @DE1, align 4
  %10 = call i32 @deskey(i8* %8, i32 %9)
  %11 = load i8*, i8** %3, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @des(i8* %11, i8* %12)
  %14 = load i8*, i8** %5, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 8
  store i8 0, i8* %15, align 1
  %16 = load i8*, i8** %5, align 8
  ret i8* %16
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @deskey(i8*, i32) #1

declare dso_local i32 @des(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
